Set all label text to white

--- a/src/app/pages/application-management/application-atividade-detail/fatura-atividade-form/fatura-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/fatura-atividade-form/fatura-atividade-form.component.html
@@ -5,7 +5,7 @@
          </span>
          <div class="grid grid-cols-12 gap-4">
              <div class="mb-6 col-span-12">
-                 <label for="taxas" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                 <label for="taxas" class="font-medium  mb-2 block">
                      Ato da taxa
                  </label>
                  <p-multiselect formControlName="taxas" inputId="taxas" [options]="listaPedidoAto" optionLabel="ato"
@@ -13,7 +13,7 @@
                  </p-multiselect>
              </div>
              <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="superficie" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                 <label for="superficie" class="font-medium  mb-2 block">
                      Superfície do estabelecimento comercial <span class="">(&#13217;)</span>
                  </label>
                  <p-inputgroup>
@@ -25,7 +25,7 @@
                  </p-inputgroup>
              </div>
              <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="total" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                 <label for="total" class="font-medium  mb-2 block">
                      Total
                  </label>
                  <p-inputgroup>
