--- a/src/app/pages/application-management/application-cadastro-detail/application-form/application-form.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/application-form/application-form.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-    <span class="text-surface-900 dark:text-surface-0 text-xl font-bold mb-6 block">
+    <span class="text-xl font-bold mb-6 block">
         Criar Candidatura
     </span>
     <div class="grid grid-cols-12 gap-8 md:gap-4">
         <div class="col-span-12 lg:col-span-2">
-            <p class="m-0 p-0 text-surface-600 dark:text-surface-200 leading-normal mr-4">Forneça as informações
+            <p class="m-0 p-0 leading-normal mr-4">Forneça as informações
                 necessárias abaixo para configurar uma nova inscrição.</p>
         </div>
 
@@ -12,7 +12,7 @@
             <form [formGroup]="applicationForm">
                 <div class="grid grid-cols-12 gap-4">
                     <div class="mb-6 col-span-12 md:col-span-6">
-                        <label for="application" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                        <label for="application" class="font-medium  mb-2 block">
                             Tipo Candidatura
                         </label>
                         <p-select formControlName="applicationType" inputId="application" [options]="applicationTypes"
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="mb-6 col-span-12 md:col-span-6">
-                        <label for="category" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                        <label for="category" class="font-medium  mb-2 block">
                             Categoria
                         </label>
                         <p-select formControlName="categoryType" inputId="category" [options]="categoryTpes"
