--- a/src/app/pages/application-management/summary/summary.component.html
+++ b/src/app/pages/application-management/summary/summary.component.html
@@ -70,7 +70,7 @@
         </h2>
 
         <div class="mb-6">
-            <label for="application" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+            <label for="application" class="font-medium  mb-2 block">
                 Funcionário(a)
             </label>
             <p-select [formControl]="selectedFuncionario" inputId="application" [options]="userList"
@@ -89,7 +89,7 @@
             </p-select>
         </div>
         <div class="mb-6">
-            <label for="notes" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+            <label for="notes" class="font-medium  mb-2 block">
                 Notas
             </label>
             <textarea [formControl]="notes" inputId="notes" rows="5" cols="30" pTextarea fluid></textarea>
