--- a/src/app/pages/auth/activation/activation.component.html
+++ b/src/app/pages/auth/activation/activation.component.html
@@ -33,6 +33,6 @@
                  Ministério de Comércio e Indústria
              </h4>
          </div>
-         <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
+         <span class="text-sm mr-4">Copyright 2025</span>
      </div>
  </p-fluid>
