--- a/src/app/pages/auth/auth-layout/auth-layout.component.html
+++ b/src/app/pages/auth/auth-layout/auth-layout.component.html
@@ -18,7 +18,7 @@
                     Ministério de Comércio e Indústria
                 </h4>
             </div>
-            <span class="text-sm text-surface-500 dark:text-surface-400">Copyright 2025</span>
+            <span class="text-sm">Copyright 2025</span>
         </div>
     </div>
 </div>
