--- a/src/app/pages/auth/verification/verification.component.html
+++ b/src/app/pages/auth/verification/verification.component.html
@@ -1,5 +1,5 @@
-  <div class="text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
-      style="background: var(--exception-pages-image); background-size: contain;">
+  <div
+      class="text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat">
       <div class="flex flex-col items-center">
           <div class="flex items-center justify-center">
               <img src="/images/logo.png" style="width: 100px" alt="logo" />
@@ -14,8 +14,8 @@
               <span class="text-surface-600 dark:text-surface-200 font-medium">Enviámos o código único para o seu
                   e‑mail:</span>
               <div class="flex items-center mt-1">
-                  <i class="pi pi-envelope text-surface-600 dark:text-surface-200"></i>
-                  <span class="text-surface-900 dark:text-surface-0 font-bold ml-2">
+                  <i class="pi pi-envelope"></i>
+                  <span class="surface-0 font-bold ml-2">
                       {{ maskEmail(email) }}
                   </span>
               </div>
