--- a/src/app/pages/dados-mestre/endereco/municipio-list/municipio-list.component.html
+++ b/src/app/pages/dados-mestre/endereco/municipio-list/municipio-list.component.html
@@ -53,7 +53,7 @@
     <form [formGroup]="form">
         <div class="grid grid-cols-12 gap-4">
             <div class="mb-6 col-span-12">
-                <label for="nome" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                <label for="nome" class="font-medium  mb-2 block">
                     Nome
                 </label>
                 <input formControlName="nome" id="nome" type="text" pInputText fluid />
