--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -1,5 +1,5 @@
 <div #form class="card">
-    <span class="text-surface-900 dark:text-surface-0 text-2xl font-bold mb-6 block">
+    <span class="text-2xl font-bold mb-6 block">
         Candidatura para o Pedido de Licenca para Exercicio de Atividade {{aplicanteData.categoria | titlecase}}
     </span>
 
