--- a/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
@@ -1,6 +1,6 @@
  <p-toast position="bottom-center" />
  <div class="card">
-     <span class="text-sur  face-900 dark:text-surface-0 text-2xl font-bold mb-6 block">
+     <span class="text-2xl font-bold mb-6 block">
          Candidatura para o Pedido Inscricacao no Cadastro {{categoria | titlecase}}
      </span>
 
@@ -228,7 +228,7 @@
                          <div class="grid grid-cols-12 gap-4">
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="tipoPedidoCadastro"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Tipo
                                  </label>
                                  <p-select formControlName="tipoPedidoCadastro" inputId="tipoPedidoCadastro"
@@ -244,7 +244,7 @@
                          <div class="grid grid-cols-12 gap-4">
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="nomeEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Nome do Estabelecimento
                                  </label>
                                  <input formControlName="nomeEstabelecimento" id="nomeEstabelecimento" type="text"
@@ -254,7 +254,7 @@
                                  <div formGroupName="localEstabelecimento" class="grid grid-cols-12">
                                      <div class="mb-6 col-span-12">
                                          <label for="local"
-                                             class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                             class="font-medium  mb-2 block">
                                              Local do Estabelecimento
                                          </label>
                                          <input formControlName="local" id="local" type="text" pInputText fluid
@@ -264,7 +264,7 @@
                                          <div class="flex flex-col sm:flex-row sm:items-center gap-6">
                                              <div class="flex-auto">
                                                  <label for="aldeia"
-                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     class="font-medium  mb-2 block">
                                                      Aldeia
                                                  </label>
                                                  <p-select fluid formControlName="aldeia" [options]="listaAldeia"
@@ -276,14 +276,14 @@
                                              </div>
                                              <div class="flex-auto">
                                                  <label for="suco"
-                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     class="font-medium  mb-2 block">
                                                      Suco
                                                  </label>
                                                  <input formControlName="suco" id="suco" type="text" pInputText fluid />
                                              </div>
                                              <div class="flex-auto">
                                                  <label for="posto"
-                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     class="font-medium  mb-2 block">
                                                      Posto Administrativo
                                                  </label>
                                                  <input formControlName="postoAdministrativo" id="postoAdministrativo"
@@ -291,7 +291,7 @@
                                              </div>
                                              <div class="flex-auto">
                                                  <label for="municipio"
-                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     class="font-medium  mb-2 block">
                                                      Municipio
                                                  </label>
                                                  <input formControlName="municipio" id="municipio" type="text"
@@ -304,7 +304,7 @@
                              @if (categoria === 'COMERCIAL') {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="tipoEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Tipo do Estabelecimento
                                  </label>
                                  <p-select formControlName="tipoEstabelecimento" inputId="tipoEstabelecimento"
@@ -315,7 +315,7 @@
                              }@else {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="tipoEmpresa"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Tipo do Empresa
                                  </label>
                                  <p-select formControlName="tipoEmpresa" inputId="tipoEmpresa"
@@ -327,7 +327,7 @@
 
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="caraterizacaoEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Caraterizacao do Estabelecimento
                                  </label>
                                  <p-select formControlName="caraterizacaoEstabelecimento"
@@ -343,14 +343,14 @@
                          </span>
                          <div class="grid grid-cols-12 gap-4">
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="risco" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                 <label for="risco" class="font-medium  mb-2 block">
                                      Quanto ao Risco
                                  </label>
                                  <input formControlName="risco" id="risco" type="text" pInputText fluid />
                              </div>
                              @if (categoria === 'COMERCIAL') {
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="ato" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                 <label for="ato" class="font-medium  mb-2 block">
                                      Quanto ao tipo de Ato
                                  </label>
                                  <p-select formControlName="ato" inputId="ato" [options]="tipoAtoOpts"
@@ -361,7 +361,7 @@
                              }@else {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="quantoAtividade"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Quanto à atividade
                                  </label>
                                  <p-select formControlName="quantoAtividade" inputId="quantoAtividade"
@@ -373,7 +373,7 @@
 
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="grupoAtividade"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Tipo de Atividade no Estabelecimento
                                  </label>
                                  <p-select formControlName="grupoAtividade" (onChange)="tipoAtividadeChange($event)"
@@ -389,7 +389,7 @@
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="grupoAtividadeCodigo"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Descricao
                                  </label>
                                  <input formControlName="grupoAtividadeCodigo" id="grupoAtividadeCodigo" type="text"
@@ -397,7 +397,7 @@
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="classeAtividade"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Atividade Principal exercida no Estabelecimento
                                  </label>
                                  <p-select formControlName="classeAtividade"
@@ -414,7 +414,7 @@
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="classeAtividadeCodigo"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Descricao
                                  </label>
                                  <input formControlName="classeAtividadeCodigo" id="classeAtividadeCodigo" type="text"
@@ -423,7 +423,7 @@
 
                              <div class="mb-6 col-span-12">
                                  <label for="alteracoes"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Alteracoes a Averbar
                                  </label>
                                  <input formControlName="alteracoes" id="alteracoes" type="text" pInputText fluid />
@@ -431,7 +431,7 @@
                              @if (!this.showDataEmissaoCertAnterior) {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="dataEmissao"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Data da Emissao do Certificado anterior
                                  </label>
                                  <p-date-picker formControlName="dataEmissaoCertAnterior" id="dataEmissaoCertAnterior"
@@ -442,7 +442,7 @@
 
                              <div class="mb-6 col-span-12">
                                  <label for="observacao"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     class="font-medium  mb-2 block">
                                      Observacao
                                  </label>
                                  <input formControlName="observacao" id="observacao" type="text" pInputText fluid />
@@ -511,7 +511,7 @@
                              <div class="grid grid-cols-12 gap-4">
                                  <div class="mb-6 col-span-12">
                                      <label for="taxas"
-                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         class="font-medium  mb-2 block">
                                          Ato da taxa
                                      </label>
                                      <p-multiselect formControlName="taxas" inputId="taxas" [options]="listaPedidoAto"
@@ -521,7 +521,7 @@
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="superficie"
-                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         class="font-medium  mb-2 block">
                                          Superfície do estabelecimento comercial <span class="">(&#13217;)</span>
                                      </label>
                                      <p-inputgroup>
@@ -534,7 +534,7 @@
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="total"
-                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         class="font-medium  mb-2 block">
                                          Total
                                      </label>
                                      <p-inputgroup>
