--- a/src/app/pages/dados-mestre/endereco/posto-list/posto-list.component.html
+++ b/src/app/pages/dados-mestre/endereco/posto-list/posto-list.component.html
@@ -58,7 +58,7 @@
         <div class="grid grid-cols-12 gap-4">
             <div class="mb-6 col-span-12">
                 <div class="mb-6 col-span-12">
-                    <label for="municipio" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    <label for="municipio" class="font-medium  mb-2 block">
                         Municipio
                     </label>
                     <p-select [appendTo]="'body'" formControlName="municipio" inputId="municipio"
@@ -66,7 +66,7 @@
                         placeholder="Selecione o Municipio">
                     </p-select>
                 </div>
-                <label for="nome" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                <label for="nome" class="font-medium  mb-2 block">
                     Nome
                 </label>
                 <input formControlName="nome" id="nome" type="text" pInputText fluid />
